--- a/page1.html
+++ b/page1.html
@@ -65,26 +65,26 @@
 <div class="split left" id="colddrinks">
 <a>
 <button class="button" onclick="colddrinks1()">ICED DRINKS</button>
-<button class="button">FRAPPE</button>
-<button class="button">SODA & JUICE</button>
-<button class="button">COLD MILK</button>
+<button class="button" onclick="colddrinks2()">FRAPPE</button>
+<button class="button" onclick="colddrinks3()">SODA & JUICE</button>
+<button class="button" onclick="colddrinks4()">COLD MILK</button>
 </a>
 </div>
 
 <div class="split left" id="groceryitems">
 <a>
-<button class="button">BULK COFFEE</button>
-<button class="button" style="border-color: #33CCFF">FROZEN BATTERS</button>
-<button class="button" style="border-color: black">MIXES</button>
-<button class="button" style="border-color: #4FB83D">PIZZA DOUGH</button>
-<button class="button" style="border-color: #E15DF0">SYRUP BOTTLES</button>
+<button class="button" onclick="groceryitems1()">BULK COFFEE</button>
+<button class="button" onclick="groceryitems2()" style="border-color: #33CCFF">FROZEN BATTERS</button>
+<button class="button" onclick="groceryitems3()" style="border-color: black">MIXES</button>
+<button class="button" onclick="groceryitems4()" style="border-color: #4FB83D">PIZZA DOUGH</button>
+<button class="button" onclick="groceryitems5()" style="border-color: #E15DF0">SYRUP BOTTLES</button>
 </a>
 </div>
 
 <div class="split left" id="fees">
 <a>
-<button class="button" style="border-color: #33CCFF">DELIVERY CHARGE</button>
-<button class="button">PACKAGING FEES</button>
+<button class="button" onclick="fees1()" style="border-color: #33CCFF">DELIVERY CHARGE</button>
+<button class="button" onclick="fees2()">PACKAGING FEES</button>
 </a>
 </div>
 
@@ -99,7 +99,7 @@
 <button class="button" style="border-color: #4FB83D">Travel Mug <br style="margin-top: 1px"> 16 oz <br style="margin-top: 1px"> Black on Black</button>
 <button class="button" style="border-color: #4FB83D">Water <br style="margin-top: 1px"> Bottle <br style="margin-top: 1px"> 17 oz</button>
 <button class="button" style="border-color: #4FB83D">Free <br style="margin-top: 1px"> Bev <br style="margin-top: 1px"> With Mug</button>
-<button class="button" style="border-color: #4FB83D">City Of Vancouver Bag <br style="margin-top: 1px"> Fee </button>
+<button class="button" style="border-color: #4FB83D">City of Vancouver Bag <br style="margin-top: 1px"> Fee </button>
 </a>
 </div>
 
@@ -385,6 +385,7 @@
 </a>
 </div>
 
+
 <div class="split left" id="latte">
 <a>
 <button class="button" style="border-color: red">Caffe Latte<br style="margin-top: 1px">8 oz</button>
@@ -433,6 +434,7 @@
 </a>
 </div>
 
+
 <div class="split left" id="steamedmilk">
 <a>
 <button class="button" style="border-color: #33CCFF">Steamed<br style="margin-top: 1px">Milk 8 oz</button>
@@ -466,6 +468,7 @@
 </a>
 </div>
 
+
 <div class="split left" id="cortado">
 <a>
 <button class="button" style="border-color: black">Cortado<br style="margin-top: 1px">4oz</button>
@@ -483,6 +486,7 @@
 <button class="button">Long Black<br style="margin-top: 1px">6oz</button>
 </a>
 </div>
+
 
 <div class="split left" id="iceddrinks">
 <a>
@@ -505,6 +509,167 @@
 </a>
 </div>
 
+<div class="split left" id="frappe">
+<a>
+<button class="button">Banana<br style="margin-top: 1px">Coconut<br style="margin-top: 1px">Frappe</button>
+<button class="button">Caramel<br style="margin-top: 1px">Frappe</button>
+<button class="button">Chai<br style="margin-top: 1px">Tea<br style="margin-top: 1px">Frappe</button>
+<button class="button">Chocolate<br style="margin-top: 1px">Banana<br style="margin-top: 1px">Frappe</button>
+<button class="button">Cinnamon<br style="margin-top: 1px">Bun<br style="margin-top: 1px">Frappe</button> <br> <br>
+
+<button class="button">Eggnog<br style="margin-top: 1px">Frappe</button>
+<button class="button">Green Tea<br style="margin-top: 1px">Matcha<br style="margin-top: 1px">Frappe</button>
+<button class="button">Mocha<br style="margin-top: 1px">Frappe</button>
+<button class="button">Oreo<br style="margin-top: 1px">Frappe</button>
+<button class="button">Pumpkin<br style="margin-top: 1px">Spice<br style="margin-top: 1px">Frappe</button> <br> <br>
+
+<button class="button">Strawberry<br style="margin-top: 1px">Cheesecake<br style="margin-top: 1px">Frappe</button>
+<button class="button">Vanilla<br style="margin-top: 1px">Espresso<br style="margin-top: 1px">Frappe</button>
+<button class="button">Vanilla<br style="margin-top: 1px">Frappe<br style="margin-top: 1px">(No Caffeine)</button>
+</a>
+</div>
+
+<div class="split left" id="soda&juice">
+<a>
+<button class="button">Apple<br style="margin-top: 1px">Juice</button>
+<button class="button">Bottled<br style="margin-top: 1px">Water</button>
+<button class="button">Bubly<br style="margin-top: 1px">Orange</button>
+<button class="button">Bubly<br style="margin-top: 1px">Pineapple</button>
+<button class="button">Glory<br style="margin-top: 1px">Juice<br style="margin-top: 1px">Co. #1</button> <br><br>
+
+<button class="button">Glory<br style="margin-top: 1px">Juice<br style="margin-top: 1px">Co. #3</button>
+<button class="button">Glory<br style="margin-top: 1px">Juice<br style="margin-top: 1px">Co. #17</button>
+<button class="button">Glory<br style="margin-top: 1px">Juice<br style="margin-top: 1px">Co. #18</button>
+<button class="button">Orangina</button>
+<button class="button">Orange<br style="margin-top: 1px">Juice</button> <br><br>
+
+<button class="button">Remedy,<br style="margin-top: 1px">Raspberry<br style="margin-top: 1px">Lemonade<br style="margin-top: 1px">Kombucha</button> 
+<button class="button">San<br style="margin-top: 1px">Pellegrino<br style="margin-top: 1px">Aranciata<br style="margin-top: 1px">(Orange)</button>
+<button class="button">San<br style="margin-top: 1px">Pellegrino<br style="margin-top: 1px">Limonata<br style="margin-top: 1px">(Lemon)</button>
+<button class="button">San<br style="margin-top: 1px">Pellegrino<br style="margin-top: 1px">Mineral Water</button>
+<button class="button">Snapple<br style="margin-top: 1px">Lemon<br style="margin-top: 1px">Tea</button> <br><br>
+
+<button class="button">Snapple<br style="margin-top: 1px">Lemonade</button>
+</a>
+</div>
+
+<div class="split left" id="coldmilk">
+<a>
+<button class="button">Cold Milk<br style="margin-top: 1px">8oz</button>
+<button class="button">Cold Milk<br style="margin-top: 1px">12oz</button>
+<button class="button">Cold Milk<br style="margin-top: 1px">16oz</button>
+<button class="button">Cold Milk<br style="margin-top: 1px">20oz</button>
+</a>
+</div>
+
+
+<div class="split left" id="bulkcoffee">
+<a>
+<button class="button">Brazil<br style="margin-top: 1px">Cerrado<br style="margin-top: 1px">(Medium)</button>
+<button class="button">Ethiopian<br style="margin-top: 1px">Yirgacheffe<br style="margin-top: 1px">(Medium)</button>
+<button class="button">Espresso</button>
+<button class="button">Espresso<br style="margin-top: 1px">Decaf</button>
+<button class="button">Guatemalan<br style="margin-top: 1px">(Medium)</button> <br><br>
+
+<button class="button">House Blend<br style="margin-top: 1px">(French<br style="margin-top: 1px">Roast)</button>
+<button class="button">Papua New<br style="margin-top: 1px">Guinea<br style="margin-top: 1px">(Dark)</button>
+<button class="button">Peruvian<br style="margin-top: 1px">(Dark)</button>
+<button class="button" style="border-color: #4FB83D">City of Vancouver Bag <br style="margin-top: 1px"> Fee </button>
+
+</a>
+</div>
+
+<div class="split left" id="frozenbatters">
+<a>
+<button class="button" style="border-color: #33CCFF">Retail<br style="margin-top: 1px">Muffin<br style="margin-top: 1px">Mix Espresso</button>
+<button class="button" style="border-color: #33CCFF">Retail<br style="margin-top: 1px">Muffin<br style="margin-top: 1px">Mix Flax</button>
+<button class="button" style="border-color: #33CCFF">Retail<br style="margin-top: 1px">Muffin<br style="margin-top: 1px">Mix Fruit</button>
+<button class="button" style="border-color: #33CCFF">Retail<br style="margin-top: 1px">Muffin<br style="margin-top: 1px">Mix Oatmeal</button>
+<button class="button" style="border-color: #33CCFF">Retail<br style="margin-top: 1px">Muffin<br style="margin-top: 1px">Mix Vegan</button> <br><br>
+
+<button class="button">Retail<br style="margin-top: 1px">Lemon<br style="margin-top: 1px">Bomb Mix</button>
+<button class="button">Retail<br style="margin-top: 1px">Cookie<br style="margin-top: 1px">Dough,<br style="margin-top: 1px">Choc Chip</button>
+<button class="button">Retail Cookie<br style="margin-top: 1px">Dough,<br style="margin-top: 1px">Oatmeal<br style="margin-top: 1px">Raisin</button>
+<button class="button" style="border-color: #4FB83D">City of Vancouver Bag <br style="margin-top: 1px"> Fee </button>
+</a>
+</div>
+
+<div class="split left" id="mixes">
+<a>
+<button class="button" style="border-color: #4FB83D">Cookie<br style="margin-top: 1px">Mix Jar,<br style="margin-top: 1px">Chocolate Chip</button>
+<button class="button" style="border-color: #4FB83D">Cookie<br style="margin-top: 1px">Mix Jar,<br style="margin-top: 1px">Oatmeal Raisin</button>
+<button class="button" style="border-color: #4FB83D">Cookie<br style="margin-top: 1px">Mix Jar,<br style="margin-top: 1px">Mini-Egg</button>
+<button class="button" style="border-color: #4FB83D">Cookie<br style="margin-top: 1px">Mix Jar,<br style="margin-top: 1px">Monster</button>
+</a>
+</div>
+
+<div class="split left" id="pizzadough">
+<a>
+<button class="button" >Pizza<br style="margin-top: 1px">Dough,<br style="margin-top: 1px">600g</button>
+<button class="button" >Mozzarella<br style="margin-top: 1px">Cheese<br style="margin-top: 1px">(Shredded),<br style="margin-top: 1px">180g</button>
+<button class="button" >Pizza<br style="margin-top: 1px">Sauce,<br style="margin-top: 1px">8oz</button>
+<button class="button" style="border-color: #4FB83D">City of Vancouver Bag <br style="margin-top: 1px"> Fee </button>
+</a>
+</div>
+
+<div class="split left" id="syrupbottles">
+<a>
+<button class="button" >Syrup<br style="margin-top: 1px">Pump</button>
+<button class="button" >Cane<br style="margin-top: 1px">Sugar</button>
+<button class="button" >Caramel</button>
+<button class="button" >Cinnamon</button>
+<button class="button" >Coconut</button> <br><br>
+
+<button class="button" >Gingerbread<br style="margin-top: 1px">(Seasonal)</button>
+<button class="button" >Hazelnut</button>
+<button class="button" >Honey</button>
+<button class="button" >Maple<br style="margin-top: 1px">(Seasonal)</button>
+<button class="button" >Peppermint<br style="margin-top: 1px">(Seasonal)</button> <br><br>
+
+<button class="button" >Sugar Free<br style="margin-top: 1px">Vanilla</button>
+<button class="button" >Vanilla</button>
+<button class="button" style="border-color: #4FB83D">City of Vancouver Bag <br style="margin-top: 1px"> Fee </button>
+
+</a>
+</div>
+
+
+<div class="split left" id="deliverycharge">
+<a>
+<button class="button" style="border-color: #33CCFF" onclick="deliverycharge1()">Delivery<br style="margin-top: 1px">$10.00</button>
+<button class="button" style="border-color: #33CCFF">Delivery<br style="margin-top: 1px">$20.00</button>
+<button class="button" style="border-color: #33CCFF">Delivery<br style="margin-top: 1px">$30.00</button>
+<button class="button" style="border-color: #33CCFF">Delivery<br style="margin-top: 1px">$40.00</button>
+<button class="button" style="border-color: #33CCFF">Delivery<br style="margin-top: 1px">$50.00</button>
+</a>
+</div>
+
+<div class="split left" id="packagingfees">
+<a>
+<button class="button" >To Go<br style="margin-top: 1px">Cup Fee</button>
+<button class="button" style="border-color: #4FB83D">City of Vancouver Bag <br style="margin-top: 1px"> Fee </button>
+<button class="button" >Bun<br style="margin-top: 1px">Huts</button>
+<button class="button" >4 Pack<br style="margin-top: 1px">Box</button>
+<button class="button" >6 Pack<br style="margin-top: 1px">Box</button> <br><br>
+
+<button class="button" >Cold Drink<br style="margin-top: 1px">Lids 16oz</button>
+<button class="button" >Cold Drink<br style="margin-top: 1px">Lids 16oz</button>
+<button class="button" >Hot Drink<br style="margin-top: 1px">Cups 8oz</button>
+<button class="button" >Hot Drink<br style="margin-top: 1px">Cups 12oz</button>
+<button class="button" >Hot Drink<br style="margin-top: 1px">Cups 16oz</button> <br><br>
+
+<button class="button" >Hot Drink<br style="margin-top: 1px">Cups 20oz</button>
+<button class="button" >Hot Drink<br style="margin-top: 1px">Lid 8oz</button>
+<button class="button" >Hot Drink<br style="margin-top: 1px">Lid<br style="margin-top: 1px">12-20oz</button>
+<button class="button" >Cutting<br style="margin-top: 1px">Charge<br style="margin-top: 1px">x Qty</button>
+<button class="button" >Shrink<br style="margin-top: 1px">Wrapping<br style="margin-top: 1px">Fee x<br style="margin-top: 1px">Qty</button> <br><br>
+
+<button class="button" >4 Litre<br style="margin-top: 1px">Pail</button>
+</a>
+</div>
+
+
+
 <div class="split right">
   <div class="box">
 	<button class="button2" style="text-align: left; margin-left: 20px">Select item to<br style="margin: 2px">update Quantity:</button>
@@ -525,6 +690,7 @@
   Price($)
   </div>
   <div class="itemsummary">
+  <p id="itemsummary"> </p>
   </div>
   <div class="box2" style="border: none;">
   <button class="button4">
@@ -548,6 +714,7 @@
   </div>
 </div>
 
+
 <div class="navbar" id="firstbottom">
 <b>
 <center>
@@ -557,6 +724,7 @@
   <a href=# id="bottombar4" onclick="purplebottom4()">GROCERY ITEMS</a>
   <a href=# id="bottombar5" onclick="purplebottom5()">FEES</a>
   <a href=# class="gray" onclick="graybottom1()"><img src="arrowright.png" style="width: 40px;"></a>
+</center>
 </b>
 </div>
 
@@ -567,6 +735,7 @@
   <a href=# id="bottombar6" onclick="purplebottom6()">MERCH</a>
   <a href=# id="bottombar7" onclick="purplebottom7()">GIFT CARDS</a>
   <a href=# id="bottombar8" onclick="purplebottom8()">WHOLE<br style="margin: 0px">SALE</a>
+</center>
 </b>
 </div>
 
@@ -650,15 +819,34 @@
 </b>
 </div>
 
-<div class="navbar" id="colddrinksbottom1">
+<div class="navbar" id="colddrinksbottom">
 <b>
   <a href=# class="gray" onclick="purplebottom3()"><br><img src="arrowup.png" style="width: 33px;"></a>
-  <a href=# id="colddrinksbar1" onclick="colddrinks1" style="border-color: red">ICED DRINKS</a>
-  <a href=# id="" onclick="" style="border-color: red">FRAPPE</a>
-  <a href=# id="" onclick="" style="border-color: red">SODA & JUICE</a>
-  <a href=# id="" onclick="" style="border-color: red">COLD MILK</a>
-  <a href=# onclick="" style="border-color: white;"></a>
-  <a href=# class="gray" onclick="graycolddrinks2()"><img src="arrowright.png" style="width: 40px;"></a>
+  <a href=# id="colddrinksbar1" onclick="colddrinks1()" style="border-color: red">ICED DRINKS</a>
+  <a href=# id="colddrinksbar2" onclick="colddrinks2()" style="border-color: red">FRAPPE</a>
+  <a href=# id="colddrinksbar3" onclick="colddrinks3()" style="border-color: red">SODA & JUICE</a>
+  <a href=# id="colddrinksbar4" onclick="colddrinks4()" style="border-color: red">COLD<br style="margin-top: 2px;">MILK</a>
+</b>
+</div>
+
+<div class="navbar" id="groceryitemsbottom">
+<b>
+  <a href=# class="gray" onclick="purplebottom4()"><br><img src="arrowup.png" style="width: 33px;"></a>
+  <a href=# id="groceryitemsbar1" onclick="groceryitems1()" style="border-color: red">BULK COFFEE</a>
+  <a href=# id="groceryitemsbar2" onclick="groceryitems2()" style="border-color: #33CCFF">FROZEN BATTERS</a>
+  <a href=# id="groceryitemsbar3" onclick="groceryitems3()" style="border-color: black">MIXES</a>
+  <a href=# id="groceryitemsbar4" onclick="groceryitems4()" style="border-color: #4FB83D">PIZZA DOUGH</a>
+  <a href=# id="groceryitemsbar5" onclick="groceryitems5()" style="border-color: #E15DF0">SYRUP BOTTLES</a>
+  
+</b>
+</div>
+
+<div class="navbar" id="feesbottom">
+<b>
+  <a href=# class="gray" onclick="purplebottom5()"><br><img src="arrowup.png" style="width: 33px;"></a>
+  <a href=# id="feesbar1" onclick="fees1()" style="border-color: #33CCFF">DELIVERY CHARGE</a>
+  <a href=# id="feesbar2" onclick="fees2()" style="border-color: red">PACKAGING FEES</a>
+  
 </b>
 </div>
 
